# udemy-agentic-ai

./: .gitignore  README.md  pyproject.toml  report.json
src/udemyagentic/: crew.py  main.py
src/udemyagentic/config/: agents.yaml  tasks.yaml
