[project]
name = "udemyagentic"
version = "0.1.0"
description = "UdemyAgentic using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "crewai[tools]==1.9.3",
    "fastapi",
    "fastapi-sso>=0.21.0",
    "langfuse>=3.14.5",
    "litellm>=1.75.3",
    "openinference-instrumentation-crewai>=0.1.21",
    "openinference-instrumentation-litellm>=0.1.29",
    "pydantic[email]>=2.11.10",
    "termcolor>=3.3.0",
    "uvicorn",
]

[project.scripts]
udemyagentic = "udemyagentic.main:run"
run_crew = "udemyagentic.main:run"
train = "udemyagentic.main:train"
replay = "udemyagentic.main:replay"
test = "udemyagentic.main:test"
run_with_trigger = "udemyagentic.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
